<resources>
    <string name="app_name">ChatVista</string>
    <string name="signinpage_heading">Welcome back</string>
    <string name="signinpage_email_hint">Email</string>
    <string name="signinpage_password_hint">Password</string>
    <string name="signinpage_sign_btn_text">Sign in</string>
    <string name="signinpage_not_account_text">Don\'t have an account?</string>
    <string name="signinpage_go_signUp_text">Sign up</string>
    <string name="or">OR</string>
    <string name="don_t_get_otp">Don\'t get OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="authentication_icon">Authentication Icon</string>
    <string name="continue_with_google_sign">Continue with Google</string>
    <string name="continue_with_facebook_sign">Continue with Facebook</string>
    <string name="continue_with_phone_sign">Continue with Phone</string>
    <string name="logo_for_chatapplication">Logo For ChatApplication</string>
    <string name="signUpPage_heading">Create your account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="go_log_in">Log in</string>
    <string name="otp_instruction">Enter the OTP you received at</string>
    <string name="signuppage_sign_btn_text">Sign Up</string>
    <string name="default_web_client_id">561019311089-m92ng6lfh3n5hb271kgphjs26thb3pt8.apps.googleusercontent.com</string>
    <string name="facebook_app_id">784024083598482</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="go_back_main_page">Go back main page</string>
    <string name="forget_password_btn">Forget Password</string>
    <string name="verification_heading">Verification</string>
    <string name="sign_up_page_terms_conditon">Agree with terms &amp; condition</string>
    <string name="terms_and_conditions">
    <![CDATA[
    <h1>Terms and Conditions</h1>
    <p>Welcome to our ChatVista application!</p>
    <p>By using this application, you agree to abide by the following terms and conditions:</p>
    <ol>
        <li>You must be at least 18 years old to use this application.</li>
        <li>Use this application responsibly and refrain from any unlawful activities.</li>
        <li>You are solely responsible for the content you post or transmit through the application.</li>
        <li>We reserve the right to suspend or terminate your account for any violation of these terms.</li>
        <li>We may collect and use your personal information as described in our Privacy Policy.</li>
        <li>We may modify these terms at any time, so please review them periodically.</li>
        <li>By using this application, you consent to receiving communications from us, including promotional messages.</li>
        <li>This application may use cookies to enhance your user experience.</li>
    </ol>
    <p>If you have any questions or concerns, please <a href="mailto:jayeshgojiya9912@gmail.com">contact us</a>.</p>
    <p>Thank you for using our chat application!</p>
    ]]>
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profilephoto">ProfilePhoto</string>
    <string name="todo">TODO</string>
</resources>