<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />
    <ImageView
        android:id="@+id/signInPageIcon"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo_for_chatapplication"
        android:src="@drawable/main_logo"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/ForgetProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/ForgotPasswordBtn"
        app:layout_constraintEnd_toEndOf="@+id/ForgotPasswordBtn"
        app:layout_constraintStart_toStartOf="@+id/ForgotPasswordBtn"
        app:layout_constraintTop_toTopOf="@+id/ForgotPasswordBtn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ForgetPageEmailTextInputLayout"
        android:layout_width="0dp"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/signinpage_email_hint"
        app:boxStrokeColor="@color/royalBlue"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/signInPageIcon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ForgetPageEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ForgotPasswordBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:background="@drawable/next_btn_background"
        android:text="@string/forget_password_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/ForgetPageEmailTextInputLayout"/>

    <TextView
        android:id="@+id/backForgetToMainPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_main_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPasswordBtn"
        app:layout_constraintVertical_bias="0.94" />
</androidx.constraintlayout.widget.ConstraintLayout>